--- a/src/main/resources/static/rest_content_view.html
+++ b/src/main/resources/static/rest_content_view.html
@@ -67,7 +67,7 @@ $(document).ready(function(){
                     console.log(result); 
                     
                   $(location).attr('href', '/boards/rest');  
-                  //location.href = "/boards/rest";   
+                  location.href = "/boards/rest";   
              },
              error: function (e) {
                  console.log(e);
